--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>homepage</title>
+	<title>Home</title>
 </head>
 <body>
-Hello WEb!
+Hello Web!
+I am an undergraduate electronics engineering student interested in VLSI, embedded logic and hardware design.
+This is a simple (and free!) site I created to allow me to advertise my <a href="rahulroyresume.pdf">resume<\a> and skills (or lack thereof).
 </body>
 </html>
 
