Added a downloads page

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 Hello Web!
-I am an undergraduate electronics engineering student interested in VLSI, embedded logic and hardware design.
-This is a simple (and free!) site I created to allow me to advertise my <a href="rahulroyresume.pdf">resume<\a> and skills (or lack thereof).
+I am an undergraduate electronics engineering student currently studying at the Indraprastha Institute of Information Technology. My interests are VLSI, embedded logic and hardware design.
+This is a simple (and free!) site I created to allow me to advertise my <a href="rahulroyresume.pdf">resume</a> and skills (or lack thereof).
 </body>
 </html>
 
