--- a/docs.html
+++ b/docs.html
@@ -4,6 +4,9 @@
 	<title>Documents page</title>
 </head>
 <body>
-This page contains download links to all my supporting documents.
+	<center>
+		This page contains download links to all my supporting documents.
+		
+	</center>
 </body>
 </html>
