--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
 	<title>Home</title>
 </head>
 <body>
-Hello Web!
-I am an undergraduate electronics engineering student currently studying at the Indraprastha Institute of Information Technology. My interests are VLSI, embedded logic and hardware design.
-This is a simple (and free!) site I created to allow me to advertise my <a href="rahulroyresume.pdf">resume</a> and skills (or lack thereof).
+	<ul>Site directory
+		<li>Resume
+		<li>
+	</ul>
+	<center>
+		<p>
+		Hello Web!
+		I am an undergraduate electronics engineering student currently studying at the Indraprastha Institute of Information Technology. My interests are VLSI, embedded logic and hardware design.
+		This is a simple (and free!) site I created to allow me to advertise my <a href="res.pdf">resume</a> and skills (or lack thereof).
+		</p>
+	</center>
 </body>
 </html>
 
