added css and a contacts page

--- a/docs.html
+++ b/docs.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Documents page</title>
+	<title>Documents</title>
 </head>
 <body>
 	<center>
-		This page contains download links to all my supporting documents.
+		This page contains download links to all my supporting documents, such as my resume
 		
 	</center>
 </body>
