--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="main.css">
 	<title>Home</title>
 </head>
 <body>
-	<ul>Site directory
-		<li>Resume
-		<li>
-	</ul>
+	<img src="">
+	<a href="index.html">Home</a>
+	<a href="docs.html">Documents</a>
+	<a href="contact.html">Contact</a>
 	<center>
-		<p>
-		Hello Web!
+		<p align="center">
+		<h1 class="title">Hello Web!</h1>
 		I am an undergraduate electronics engineering student currently studying at the Indraprastha Institute of Information Technology. My interests are VLSI, embedded logic and hardware design.
 		This is a simple (and free!) site I created to allow me to advertise my <a href="res.pdf">resume</a> and skills (or lack thereof).
 		</p>
+		
 	</center>
 </body>
 </html>
