post graduation changes

--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<title>Home</title>
 </head>
-<body>
+<body style="background-color: powderblue">
 	<img src="">
 	<a href="index.html">Home</a>
 	<a href="docs.html">Documents</a>
 	<a href="contact.html">Contact</a>
+	<a href="reviews.html">Book Reviews</a>
 	<center>
-		<p align="center">
+		<p style="font-family: Noto Sans" align="center">
 		<h1 class="title">Hello Web!</h1>
-		I am an undergraduate electronics engineering student currently studying at the Indraprastha Institute of Information Technology. My interests are VLSI, embedded logic and hardware design.
-		This is a simple (and free!) site I created to allow me to advertise my <a href="res.pdf">resume</a> and skills (or lack thereof).
+		I am an electronics engineer, graduate of the Indraprastha Institute of Information Technology. My interests are VLSI (particularly memory design), architecture (from a security perspective), embedded logic and hardware design.
+		This is a simple (and free!) site I created to allow me to advertise my <a href="res.pdf">resume</a> and skills (or lack thereof) but mainly to share whatever ramblings I may have.
+		Yes I know I can create a Twitter account but this is more hands on.
 		</p>
 		
 	</center>
